--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
+    "react-twitter-embed": "^3.0.3",
     "react-window": "^1.8.6",
     "redux-localstorage-simple": "^2.4.1",
     "remark-gfm": "^1.0.0",
